Before import of Joaozin-dev/app2 without specified path

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -38,54 +38,7 @@
   </head>
   <body>
     <script src="quimica/js/sweetjs.js"></script>
-    <script type="text/javascript">
-        var btn = document.querySelector('button');
-        btn.addEventListener('click',()=>{
-            Swal.fire({
-              title: 'Are you sure?',
-              text: "You won't be able to revert this!",
-              icon: 'warning',
-              position: 'bottom',
-              showCancelButton: true,
-              confirmButtonColor: '#3085d6',
-              cancelButtonColor: '#d33',
-              confirmButtonText: 'Yes, delete it!',
-              showClass:{
-                popup: 'animated fadeInUp faster'
-              },
-              hideClass:{
-                popup: 'animated fadeOutDown faster'
-              }
-            }).then((result) => {
-              if (result.value) {
-                Swal.fire(
-                  'Deleted!',
-                  'Your file has been deleted.',
-                  'success'
-                )
-              }
-            })
-        })
-         toastr["success"]("HELLO MAN BOY HEHE", "HEHE BOY")
-
-        toastr.options = {
-          "closeButton": true,
-          "debug": false,
-          "newestOnTop": true,
-          "progressBar": true,
-          "positionClass": "toast-top-right",
-          "preventDuplicates": false,
-          "onclick": null,
-          "showDuration": "300",
-          "hideDuration": "1000",
-          "timeOut": "5000",
-          "extendedTimeOut": "1000",
-          "showEasing": "swing",
-          "hideEasing": "linear",
-          "showMethod": "fadeIn",
-          "hideMethod": "fadeOut"
-        }
-    </script>
+    <script type="text/javascript" src = "quimica/js/popup.js"></script>
       <div class="code-show">
         <input type="number" id="code" placeholder="You Code">
         <button id="send">Enviar</button>
