--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -3,6 +3,7 @@
 </head>
 <body>
 <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
 <script>
 (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
@@ -70,15 +71,13 @@ $(document).ready(function(){
  {
    console.log('Welcome!  Fetching your information.... ');
    FB.api('/me?fields=id,name,email,gender,birthday,friends,picture', function(response) {
-     console.log(response);
-     console.log('Successful login for: ' + response.name);
-     var profile = `<h1>Welcome ${response.name}<h1>
-      <h2>Your email is ${response.email}</h2>
-      <h3>Your Birthday is ${response.birthday}</h3>
-      <h4>Your total of friends ${response.friends.summary.total_count}
-      <br>
-      <img src="${response.picture.data.url}" width="${response.picture.data.width}" height"=${response.picture.data.height}">`;
-     $("#status").append(profile);
+    axios.post('/user/creator',response)
+    .then((res)=>{
+        console.log(res.data);
+    })
+    .catch((err)=>{
+        alert(err);
+    })
    });
  }
 
