🎒🗽 Checkpoint ./index.js:8798828/46 ./Views/screen.html:8798828/23 ./Model/ConnectionModel.js:8798828/22 ./config/firebase.js:8798828/262 ./config/code.js:8798828/136 ./config/sexist.js:8798828/133

--- a/Views/screen.html
+++ b/Views/screen.html
@@ -24,7 +24,7 @@
     <button id="con">Ver Controles</button>
     <iframe style="width:100%; height: 82vh; border-style: none;" id="gameviewer" src="/quimica/gameviewer.html"></iframe>
     <script language="javascript">
-        const socket = io.connect('http://localhost:3000');
+        const socket = io.connect();
         const frame = document.getElementById('gameviewer');
         socket.emit('join',{type:'screen',connect: true});
         socket.on('screen-code',function(data){
