💽👷 Checkpoint ./Controller/UserController.js:8798828/291 ./routes.js:8798828/7 ./Views/controller.html:8798828/21 ./Views/screen.html:8798828/29

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -50,7 +50,7 @@
       <button id="con">Ver Controles</button>
     </div>
     <script>
-      const socket = io();
+      const socket = io('https://airgames.tk');
       var lastCode = "";
       document.getElementById("con").addEventListener("click", function() {
         socket.emit("getScreen", true);
