--- a/Views/controller.html
+++ b/Views/controller.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-auth.js"></script>
+    <link rel="shortcut icon" href="https://cdn.imac-group.cf/images/imaf.ico" type="image/x-icon">
     <style type="text/css">
       body {
         margin: 0;
@@ -43,7 +44,7 @@
     <script src="quimica/js/sweetjs.js"></script>
     <script type="text/javascript" src="quimica/js/popup.js"></script>
     <div class="code-show">
-      <input type="number" id="code" placeholder="You Code" />
+      <input type="number" id="code"/>
       <button id="send">Enviar</button>
       <img id="img" style="width:100px; height: 100px;" src="<%= photo%>" />
       <!--iframe style="width:100%; height: 82vh; border-style: none;" id="gameviewer" src="/quimica/gamecontroller.html"></iframe-->
@@ -64,7 +65,7 @@
         socket.emit("new-controller", {
           code,
           player: {
-            user: "<%= user%>",
+            user: "<%= fb%>",
             photo: "<%= photo%>",
             name: "<%= name%>"
           }
