🙈🏉 Checkpoint ./Controller/UserController.js:8798828/1327 ./Views/pages/login.html:8798828/277 ./routes.js:8798828/20

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -47,7 +47,14 @@
 
         function statusChangeCallback(response) {
           if (response.status === "connected") {
-            console.log(response);
+            axios
+                .get("/user/find", response)
+                .then(res => {
+                  console.log(res.data);
+                })
+                .catch(err => {
+                  alert(err);
+                });
           } else {
             // Logging the user to Facebook by a Dialog Window
             facebookLoginByDialog();
