--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -1,8 +1,12 @@
 <html>
-  <head> </head>
+  <head>
+    <title>Login</title>
+  </head>
   <body>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
+    <script src="quimica/js/sweetjs.js"></script>
+    <script type="text/javascript" src="quimica/js/popup.js"></script>
     <script>
       (function(d, s, id) {
         var js,
@@ -50,8 +54,10 @@
             axios
                 .get("/user/find/"+response.authResponse.userID, response)
                 .then(res => {
-                  if(res.data.code === 3){
+                  if(res.data.code !== 3){
                     fetchUserProfile();
+                  } else if(!res.data.user){
+                    // window.location = '/mobile';
                   }
                 })
                 .catch(err => {
