--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -2,6 +2,7 @@
   <head>
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" href="quimica/css/animate.css">
   </head>
   <body>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
