🏠🌹 Checkpoint ./public/quimica/js/popup.js:8798828/297 ./Views/pages/login.html:8798828/74

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -62,7 +62,7 @@
                     fetchUserProfile();
                   } else if(res.data.user !== undefined){
                     // window.location = '/mobile';
-                    PopupUserWithImage('Continuar','Voce deseja continuar como ' + res.data.user.name,res.data.user.picture)
+                    PopupUserWithImage('Continuar','Percebemos <b>' + res.data.user.name + '</b>',res.data.user.picture)
                   }
                 })
                 .catch(err => {
