🛰✨ Checkpoint ./Views/pages/login.html:8798828/347 ./public/quimica/js/popup.js:8798828/268 ./Controller/UserController.js:8798828/296

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -58,11 +58,11 @@
             axios
                 .get("/user/find/"+response.authResponse.userID, response)
                 .then(res => {
-                  if(res.data.code !== 3){
+                  if(res.data.code === 2){
                     fetchUserProfile();
                   } else if(res.data.user !== undefined){
                     // window.location = '/mobile';
-                    PopupUserWithImage('Continuar','Percebemos <b>' + res.data.user.name + '</b>',res.data.user.picture)
+                    PopupUserWithImage('Continuar','Percebemos que voce ja tem uma conta com esse <b>Facebook</b>.<br/>Voce deseja continuar como: <b>' + res.data.user.name + '</b>',res.data.user.picture)
                   }
                 })
                 .catch(err => {
@@ -82,7 +82,7 @@
                 .post("/user/creator", response)
                 .then(res => {
                   if(res.data.code === 4){
-                    // window.location = '/mobile';
+                    window.location = '/mobile';
                   }
                 })
                 .catch(err => {
