🍓🏠 Checkpoint ./Views/pages/login.html:8798828/265

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -78,11 +78,13 @@
           FB.api(
             "/me?fields=id,name,email,gender,birthday,friends,picture",
             function(response) {
+              console.log(response);
               axios
                 .post("/user/creator", response)
                 .then(res => {
+                  console.log(response);
                   if(res.data.code === 4){
-                    window.location = '/mobile';
+                    // window.location = '/mobile';
                   }
                 })
                 .catch(err => {
