👩‍👩‍👦🌿 Checkpoint ./Controller/UserController.js:8798828/311 ./Views/pages/login.html:8798828/3 ./Views/screen.html:8798828/541

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -81,7 +81,7 @@
                 .post("/user/creator", response)
                 .then(res => {
                   if(res.data.code === 4){
-                    // window.location = '/mobile';
+                    window.location = '/mobile';
                   }
                 })
                 .catch(err => {
