--- a/Views/controller.html
+++ b/Views/controller.html
@@ -9,78 +9,75 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-auth.js"></script>
-    <link rel="shortcut icon" href="https://cdn.imac-group.cf/images/imaf.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="https://cdn.imac-group.cf/images/imaf.ico"
+      type="image/x-icon"
+    />
     <style type="text/css">
+      html,
       body {
+        position: relative;
+        height: 100%;
+      }
+      body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
         margin: 0;
         padding: 0;
-        font-family: sans-serif;
       }
-      form {
-        margin: 15px;
+      .swiper-container {
+        width: 100%;
+        height: 100%;
       }
-      input {
-        width: 30px;
-        height: 30px;
-        padding: 5px;
-        border: 1px solid #888;
-        font-size: 2em;
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
         align-items: center;
-        text-decoration: none;
-      }
-      input[type="number"]::-webkit-inner-spin-button,
-      input[type="number"]::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        margin: 0;
       }
     </style>
   </head>
   <body>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="quimica/js/sweetjs.js"></script>
     <script type="text/javascript" src="quimica/js/popup.js"></script>
-    <div class="code-show">
-      <input type="number" id="code"/>
-      <button id="send">Enviar</button>
-      <img id="img" style="width:100px; height: 100px;" src="<%= photo%>" />
-      <!--iframe style="width:100%; height: 82vh; border-style: none;" id="gameviewer" src="/quimica/gamecontroller.html"></iframe-->
-      <button id="con">Ver Controles</button>
+    <script type="text/javascript" src="quimica/controller/index.js"></script>
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">Slide 4</div>
+        <div class="swiper-slide">Slide 5</div>
+        <div class="swiper-slide">Slide 6</div>
+        <div class="swiper-slide">Slide 7</div>
+        <div class="swiper-slide">Slide 8</div>
+        <div class="swiper-slide">Slide 9</div>
+        <div class="swiper-slide">Slide 10</div>
+      </div>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination"></div>
     </div>
     <script>
-      const socket = io('https://airgames.tk');
-      var lastCode = "";
-      document.getElementById("con").addEventListener("click", function() {
-        socket.emit("getScreen", true);
-      });
-      socket.on("screen-id", function(data) {
-        console.log(data);
-      });
-      document.getElementById("send").addEventListener("click", function() {
-        const el = document.getElementById("code");
-        const code = el.value;
-        socket.emit("new-controller", {
-          code,
-          player: {
-            user: "<%= fb%>",
-            photo: "<%= photo%>",
-            name: "<%= name%>"
-          }
-        });
-        lastCode = code;
-        el.value = "";
-      });
-      socket.on("remove-connection", function() {
-        alert("Tela Desconectada");
-        const el = document.getElementById("code");
-        el.value = lastCode;
-      });
-      function hello() {
-        return socket;
-      }
+      
     </script>
   </body>
 </html>
