--- a/public/quimica/controller/style.css
+++ b/public/quimica/controller/style.css
@@ -1,155 +1,36 @@
+html,
 body {
-  font-family: Arial;
-}
-canvas {
-  border: 1px solid #000;
-}
-kbd {
-  border: 1px solid #888;
-  border-radius: 3px;
-  font-family: Arial;
-  font-size: 11pt;
-  padding: 2px 6px;
-}
-.container {
-  margin: auto;
-  width: 800px;
-}
-#game {
-  margin-bottom: 15px;
-}
-#health-bars, #controls {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.health-label {
-  line-height: 1.5em;
-}
-.health {
-  background: #ccc;
-  height: 20px;
   position: relative;
-  width: 320px;
+  height: 100%;
 }
-.fill {
-  background: #0a0;
-  display: block;
-  height: 20px;
-  position: absolute;
-  transition: width 0.5s;
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
 }
-#controls {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 5px;
+.swiper-container {
+  width: 100%;
+  height: 100%;
 }
-#p1-health {
-  left: 0;
-  width: 0%;
-}
-#p2-health {
-  right: 0;
-  width: 0%;
-}
-#p1-ctrls, #p2-ctrls {
-  display: flex;
-  flex-direction: row;
-  flex: 0 0 50%;
-}
-#p2-ctrls {
-  justify-content: flex-end;
-}
-#keys {
-  display: flex;
-  flex-direction: row;
-  flex: 0 0 50%;
-  justify-content: space-between;
-}
-#p1-keys kbd:nth-of-type(1) {
-  margin-left: 35px;
-}
-#p1-keys kbd:nth-of-type(2) {
-  margin-left: 60px
-}
-#p1-keys kbd:nth-of-type(3) {
-  margin-left: 65px
-}
-#p1-keys kbd:nth-of-type(4) {
-  margin-left: 45px
-}
-#p2-keys {
-  justify-content: flex-end;
-}
-#p2-keys kbd:nth-of-type(1) {
-  margin-right: 60px;
-}
-#p2-keys kbd:nth-of-type(2) {
-  margin-right: 60px
-}
-#p2-keys kbd:nth-of-type(3) {
-  margin-right: 65px
-}
-#p2-keys kbd:nth-of-type(4) {
-  margin-right: 35px
-}
-.move, .a-btn, .b-btn {
-  border-radius: 50%;
-  cursor: pointer;
-  display: block;
-  font-size: 30pt;
-  margin: 5px;
-  width: 80px;
-  height: 80px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.a-btn, .b-btn {
-  color: #fff;
-  line-height: 2em;
+.swiper-slide {
   text-align: center;
-}
-.arrow-left, .arrow-right {
-  display: block;
-  margin: 15px auto;
-}
-.arrow-left {
-  width: 0; 
-  height: 0; 
-  border-bottom: 25px solid transparent;
-  border-top: 25px solid transparent;
-  border-right: 25px solid #2f2f2f;
-  font-size: 0;
-  line-height: 0;
-}
-.arrow-right {
-  width: 0; 
-  height: 0; 
-  border-bottom: 25px solid transparent;
-  border-top: 25px solid transparent;
-  border-left: 25px solid #2f2f2f;
-  font-size: 0;
-  line-height: 0;
-}
-.move {
-  background: #888;
-}
-.move:active {
-  background: #666;
-}
-.a-btn {
-  background: #04c;
-}
-.a-btn:active {
-  background: #028;
-}
-.b-btn {
-  background: #080;
-}
-.b-btn:active {
-  background: #040;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
