--- a/Views/controller.html
+++ b/Views/controller.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Swiper demo</title>
+    <title>Controller</title>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
     <link
       rel="shortcut icon"
       href="https://cdn.imac-group.cf/images/imaf.ico"
@@ -26,33 +27,42 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">XGames</a>
+        <a href="#" data-target="slide-out" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+      </div>
+    </nav>
     <ul id="slide-out" class="sidenav">
       <li>
         <div class="user-view">
-          <a href="#user"><img class="circle" src="<%=photo%>"/></a>
-          <a href="#name"><span class="white-text name" id="name"></span></a>
-          <a href="#email"
-            ><span class="black-text email"><%=name%></span></a
-          >
+          <a href=""><img class="circle" src="<%=photo%>"/></a>
+          <a href=""><span class="black-text name"><%=name%></span></a>
         </div>
       </li>
       <li>
-        <a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a>
+        <a href="#!"><i class="material-icons">history</i>Meus Historicos</a>
       </li>
       <li><a href="#!">Second Link</a></li>
       <li><div class="divider"></div></li>
       <li><a class="subheader">Subheader</a></li>
       <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
     </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"
-      ><i class="material-icons">menu</i></a
-    >
     <div class="container">
       <div class="row">
         <div class="col s12 m7">
           <div class="card">
             <div class="card-image">
-              <img src="https://cdn.imac-group.cf/images/IMG_20190411_104258244.jpg" />
+              <img
+                src="https://cdn.imac-group.cf/images/IMG_20190411_104258244.jpg"
+              />
               <span class="card-title">HEHE</span>
             </div>
             <div class="card-content">
@@ -77,8 +87,8 @@
       document.addEventListener("DOMContentLoaded", function() {
         var elems = document.querySelectorAll(".sidenav");
         var instances = M.Sidenav.init(elems);
-        $('#name').html('<%=name%>');
       });
+      $(document)
     </script>
   </body>
 </html>
