--- a/Views/controller.html
+++ b/Views/controller.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
+    <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <link
       rel="shortcut icon"
       href="https://cdn.imac-group.cf/images/imaf.ico"
@@ -48,37 +49,10 @@
         </div>
       </li>
       <li>
-        <a href="#!"><i class="material-icons">history</i>Meus Historicos</a>
+        <a class="waves-effect" href="#!"><i class="material-icons">history</i>Meus Historicos</a>
       </li>
-      <li><a href="#!">Second Link</a></li>
-      <li><div class="divider"></div></li>
-      <li><a class="subheader">Subheader</a></li>
-      <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
     </ul>
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m7">
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://cdn.imac-group.cf/images/IMG_20190411_104258244.jpg"
-              />
-              <span class="card-title">HEHE</span>
-            </div>
-            <div class="card-content">
-              <p>
-                I am a very simple card. I am good at containing small bits of
-                information. I am convenient because I require little markup to
-                use effectively.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="quimica/js/sweetjs.js"></script>
     <script type="text/javascript" src="quimica/js/popup.js"></script>
@@ -88,7 +62,37 @@
         var elems = document.querySelectorAll(".sidenav");
         var instances = M.Sidenav.init(elems);
       });
-      $(document)
+      $(document).ready(function(){
+        axios.get('/game/list')
+          .then(function(result){
+          const { data } = result;
+          data.forEach(function(item){
+            console.log(item);
+            $('.container').append(`
+              <div class="row">
+                  <div class="col s12 m7">
+                    <div class="card small">
+                      <div class="card-image">
+                        <img
+                          src="${item.game_picture}" style="width: 100%; height:100%"
+                        />
+                        <span class="card-title">${item.game_name}</span>
+                      </div>
+                      <div class="card-content">
+                        <p>
+                          ${item.game_description}
+                        </p>
+                      </div>
+                      <div class="card-action">
+                        <a href="#">Jogue agora</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            `)
+          });
+        });
+      });
     </script>
   </body>
 </html>
