--- a/Views/controller.html
+++ b/Views/controller.html
@@ -51,6 +51,9 @@
       <li>
         <a class="waves-effect" href="#!"><i class="material-icons">history</i>Meus Historicos</a>
       </li>
+      <li>
+        <a class="waves-effect" href="#!"><i class="material-icons">cash</i>Meu Cash: <%= cash%></a>
+      </li>
     </ul>
     <div class="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -84,7 +87,7 @@
                         </p>
                       </div>
                       <div class="card-action">
-                        <a href="#">Jogue agora</a>
+                        <a href="#">Jogue agora por R$${item.game_price},00</a>
                       </div>
                     </div>
                   </div>
