--- a/Views/controller.html
+++ b/Views/controller.html
@@ -52,7 +52,7 @@
         <a class="waves-effect" href="#!"><i class="material-icons">history</i>Meus Historicos</a>
       </li>
       <li>
-        <a class="waves-effect" href="#!"><i class="material-icons">cash</i>Meu Cash: <%= cash%></a>
+        <a class="waves-effect" href="#!"><i class="material-icons">credit_card</i>Meu Cash: <b><%= cash%></b></a>
       </li>
     </ul>
     <div class="container"></div>
@@ -70,11 +70,10 @@
           .then(function(result){
           const { data } = result;
           data.forEach(function(item){
-            console.log(item);
             $('.container').append(`
               <div class="row">
                   <div class="col s12 m7">
-                    <div class="card small">
+                    <div class="card medium">
                       <div class="card-image">
                         <img
                           src="${item.game_picture}" style="width: 100%; height:100%"
@@ -87,7 +86,7 @@
                         </p>
                       </div>
                       <div class="card-action">
-                        <a href="#">Jogue agora por R$${item.game_price},00</a>
+                        <a class="blue-text text-darken-2" href="#">Jogue agora por apenas R$${item.game_price},00</a>
                       </div>
                     </div>
                   </div>
