--- a/Views/controller.html
+++ b/Views/controller.html
@@ -73,7 +73,7 @@
             $('.container').append(`
               <div class="row">
                   <div class="col s12 m7">
-                    <div class="card medium">
+                    <div class="card hoverable medium">
                       <div class="card-image">
                         <img
                           src="${item.game_picture}" style="width: 100%; height:100%"
