😽🚴 Checkpoint ./Controller/GameController.js:8798828/70 ./Views/pages/info.html:8798828/2817 ./routes.js:8798828/35 ./Views/controller.html:8798828/29

--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -26,13 +26,15 @@
         <iframe
           width="853"
           height="480"
-          src="//www.youtube.com/embed/jU27QehicQQ?rel=0"
+          src="<%= game_video%>"
           frameborder="0"
           allowfullscreen
         ></iframe>
       </div>
       <div class="valign-wrapper">
         <h5 class="center-align"><%= game_name%></h5>
+      </div>
+      <div class="valign-wrapper">
         <p><%= game_description%></p>
       </div>
     </div>
