--- a/Views/controller.html
+++ b/Views/controller.html
@@ -86,7 +86,7 @@
                         </p>
                       </div>
                       <div class="card-action">
-                        <a class="blue-text text-darken-2" href="#">Jogue agora por apenas R$${item.game_price},00</a>
+                        <a class="blue-text text-darken-2" href="/game/info/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
                       </div>
                     </div>
                   </div>
