--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -37,6 +37,9 @@
       <div class="valign-wrapper">
         <p><%= game_description%></p>
       </div>
+      <div>
+        
+      </div>
     </div>
   </body>
 </html>
