🚪💝 Checkpoint ./public/quimica/js/popup.js:8798828/1826 ./Views/pages/info.html:8798828/591

--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -10,8 +10,14 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="css/materialize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
       media="screen,projection"
+    />
+    <!--Import animate.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="/quimica/css/animate.css"
     />
 
     <!--Let browser know website is optimized for mobile-->
